--- a/index.html
+++ b/index.html
@@ -65,20 +65,18 @@
       <p class="service__ttl">Service</p>
       <h2 class="service__content">サービス内容</h2>
       <div class="card__main">
-        <div class="service__main">
-          <img src="img/service__first.svg" alt=""><h3 span class="card__ttl1">教育事業</h3><p span class="card__text1">サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+        <div class="service__main"><img src="img/service__first.svg" alt="">  
+          <h3 class="card__ttl1">教育事業</h3><p class="card__text1">サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+        </div>  
+      </div>  
+      <div class="card__side">
+        <div class="service__side1"><img src="img/service__first.svg" alt="">
         </div>
-        <div class="card__side">
-          <div class="service__side1">  
-            <img src="img/service__first.svg" alt=""><h3 span class="card__ttl2">教育事業</h3>
-            <p span class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
+          <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
+        <div class="service__side2"><img src="img/service__first.svg" alt="">
           </div>
-          <div class="service__side2">  
-            <img src="img/service__first.svg" alt=""><h3 span class="card__ttl2">教育事業</h3>
-            <p span class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
-          </div>  
-        </div>
-      </div> 
+          <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>  
+      </div>
     </div>    
     <div class="blog">
       <div class="blog__inner">
@@ -94,8 +92,8 @@
             <div class="blog__tag">Blog</div>
             <h3 class="card__ttl">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</h3>
             <div class="tag">
-              <span class="card__date">2021/01/01</span>
-              <span class="card__tag">#COACHTECH</span>
+              <p class="card__date">2021/01/01</p>
+              <p class="card__tag">#COACHTECH</p>
             </div>
           </div>
         </div>
@@ -107,8 +105,8 @@
             <div class="blog__tag">Blog</div>
             <h3 class="card__ttl">プログラミング学習の勉強方法を特集。挫折しない秘訣とは？</h3>
             <div class="tag">
-              <span class="card__date">2021/01/01</span>
-              <span class="card__tag">#COACHTECH</span>
+              <p class="card__date">2021/01/01</p>
+              <p class="card__tag">#COACHTECH</p>
             </div>
           </div>
         </div>
