--- a/index.html
+++ b/index.html
@@ -70,14 +70,24 @@
         </div>  
       </div>  
       <div class="card__side">
-        <div class="service__side1"><img src="img/service__first.svg" alt="">
-        </div>
-          <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
-        <div class="service__side2"><img src="img/service__first.svg" alt="">
+        <div class="service__side1">
+          <div>
+            <img src="img/service__first.svg" alt="">
           </div>
-          <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>  
+          <div>
+            <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
+          </div>
+        </div>    
+        <div class="service__side2">
+          <div>
+            <img src="img/service__first.svg" alt="">
+          </div>
+          <div>
+            <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
+          </div>  
+        </div>  
       </div>
-    </div>    
+    </div>     
     <div class="blog">
       <div class="blog__inner">
         <p class="blog__ttl">Blog</p>
