--- a/index.html
+++ b/index.html
@@ -64,29 +64,31 @@
     <div class="service">
       <p class="service__ttl">Service</p>
       <h2 class="service__content">サービス内容</h2>
-      <div class="card__main">
-        <div class="service__main"><img src="img/service__first.svg" alt="">  
-          <h3 class="card__ttl1">教育事業</h3><p class="card__text1">サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
-        </div>  
-      </div>  
-      <div class="card__side">
-        <div class="service__side1">
-          <div>
-            <img src="img/service__first.svg" alt="">
-          </div>
-          <div>
-            <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
+      <div class="img__card">
+        <div class="card__main">
+          <div class="service__main"><img src="img/service__first.svg" alt="">  
+            <h3 class="card__ttl1">教育事業</h3><p class="card__text1">サンプルテキストがここに入ります。サンプルテキストがここに入ります。サンプルテキストがここに入ります。</p>
+          </div>  
+        <div class="card__side">
+          <div class="service__side1">
+            <div>
+              <img src="img/service__first.svg" alt="">
+            </div>
+            <div>
+              <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
+            </div>
+          </div>    
+          <div class="service__side2">
+            <div>
+              <img src="img/service__first.svg" alt="">
+            </div>
+            <div>
+              <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
+            </div>  
           </div>
         </div>    
-        <div class="service__side2">
-          <div>
-            <img src="img/service__first.svg" alt="">
-          </div>
-          <div>
-            <h3 class="card__ttl2">教育事業</h3><p class="card__text2">サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。<br>サンプルテキストがここに入ります。</p>
-          </div>  
-        </div>  
-      </div>
+        </div>
+      </div>  
     </div>     
     <div class="blog">
       <div class="blog__inner">
