--- a/index.html
+++ b/index.html
@@ -169,9 +169,15 @@
       </table>
     </div>
     <div class="pic__item">
-      <img src="img/recruit.png" alt=""><p class="pic__recruit">採用情報</p>
-      <img src="img/interview.png" alt=""><p class="pic__interview">社員インタビュー</p>
-    </div> 
+      <div>
+        <img src="img/recruit.png" alt="">
+        <p class="pic__recruit">採用情報</p>
+      </div>
+      <div>
+        <img src="img/interview.png" alt="">
+        <p class="pic__interview">社員インタビュー</p>
+      </div>  
+    </div>
     <div class="contact">
         <p class="contact__text">株式会社estraへのお問い合わせはこちらから</p>
         <p class="contact__bar">|</p>
